updating nav bar visuals, and adding a separate overlay nav (position fixed) that appears when the jumbotron is scrolled out of view

--- a/src/stylesheets/navigation-bar.scss
+++ b/src/stylesheets/navigation-bar.scss
@@ -1,15 +1,36 @@
-$navbar-height: 54px;
+$navbar-height: 40px;
 
 #nav-bar {
-	background:rgba(0,0,0,0.6);
-	position:fixed;
 	width:100%;
-	height:auto;
-	z-index:5;
 
-	.padding-wrapper {
+	.content {
 		padding:12px;
 		overflow:hidden;
+
+		&.main-nav {
+			position:absolute;
+			top:0px;
+			width:calc(100% - 24px);
+			height:auto;
+			z-index:5;
+		}
+
+		&.overlay-nav {
+			position:fixed;
+			width:calc(100% - 24px);
+			height:auto;
+			background:rgba(0,0,0,0.7);
+			z-index:5;
+			transition:opacity 0.3s ease;
+
+			&.overlay-show {
+				opacity:1;
+			}
+
+			&.overlay-hide {
+				opacity:0;
+			}
+		}
 	}
 
 	.icon {
@@ -27,16 +48,18 @@ $navbar-height: 54px;
 		height:$navbar-height;
 
 		.pill {
+			opacity:0.7;
 			line-height:$navbar-height;
 			text-transform:uppercase;
 			width:auto;
 			height:auto;
 			display:inline-block;
 
-			font-size:14px;
+			font-size:12px;
 			color:#fff;
 
 			a {
+				text-decoration:none;
 				color:#fff;
 				&:hover {
 					color:#000;
@@ -47,9 +70,14 @@ $navbar-height: 54px;
 				margin-right:12px;
 			}
 			&:last-child {
-				border-left:2px rgba(255,255,255,0.5) solid;
 				padding-left:12px;
 			}
+		}
+
+		.vertical-divider {
+			font-size:14px;
+			color:#999;
+			line-height:$navbar-height;
 		}
 	}
 }
